# notification-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  factory.py  main.py  schemas.py  tasks.py
app/api/v1/: notifications.py
app/crud/: notifications.py
app/db/: base.py  database.py  models.py
app/schemas/: notifications.py
app/utils/: logger.py
crud/: notifications.py
tests/: test_crud.py  test_schemas.py  test_tasks.py
