[project]
name = "notification-service"
version = "0.1.0"
description = ""
authors = [
    {name = "kristinabykova",email = "kristina.bykova.03@list.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
